# cell

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFESTO.md  NOTICE  README.md  SECURITY.md  TRADEMARK.md  run_test.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
benchmarks/: HARDWARE_PROFILE.md  METHODOLOGY.md  README.md  RESULTS.jsonl  bench_raw_exec.py  e2b_apples_to_apples.py
command-center/: index.html  package-lock.json  package.json
command-center/src/: App.tsx  index.css
command-center/src/wasm/: wasm_engine.d.ts  wasm_engine.js  wasm_engine_bg.wasm  wasm_engine_bg.wasm.d.ts
demo/: cell_agent.py  receipts.jsonl
docker/: Dockerfile.gateway
docs/: openapi.yaml
docs-site/: astro.config.mjs  package-lock.json
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/api/: python.md  rest.md  typescript.md
docs-site/src/content/docs/cli/: reference.md
docs-site/src/content/docs/getting-started/: installation.mdx  migrating-from-e2b.mdx  quickstart.mdx
docs-site/src/content/docs/integrations/: autogen.md  claude.md  crewai.md  langchain.md  openai.md  vercel.md
docs-site/src/content/docs/sandbox/: commands.md  environment-variables.md  filesystem.mdx  git.md  lifecycle.mdx  persistence.md  pty.md  running-code.mdx  webhooks.mdx
docs-site/src/content/docs/sovereignty/: data-sovereignty.md  performance.md  receipts.mdx  self-hosting.md
docs-site/src/content/docs/templates/: custom.md  dockerfile.md  overview.md
docs-site/src/styles/: custom.css
gateway/: Cargo.toml  README-pypi.md  openapi.yaml  patch_rate_limit.py  pyproject.toml  qjs_wasi.c  scratch.rs
gateway/src/: cell.rs  cell_api.rs  compiler.rs  inference.rs  lib.rs  license.rs  main.rs  transpiler.rs  util.rs  ws_api.rs
gateway/static/: dashboard.html
mesh-signaling/: Cargo.toml
mesh-signaling/src/: main.rs
sdk/: CHANGELOG.md  README.md  demo.py  publish.sh  pyproject.toml  synapse_eval.py  synapse_generate.py
sdk/js/: README.md  atlantic_handshake.js  atlantic_handshake.ts  atlantic_shared_compute.js  atlantic_shared_compute.ts  build.js  cell.js  cell.ts  dummy.js  ffi_runtime.js  ffi_runtime.ts  mesh_sharding.js  mesh_sharding.ts  mesh_test.html  package-lock.json  package.json  safetensors.js  safetensors.ts  test_safetensors.mjs  test_safetensors.ts  test_webgpu.js  test_webgpu.mjs  test_webgpu.ts  tokenizer.js  tokenizer.ts  tsconfig.json  webgpu_engine.js  webgpu_engine.ts
sdk/js/src/: index.ts  sandbox.ts
sdk/js/wasm/: compiler.wasm
sdk/synapse/: __init__.py  async_cell.py  async_e2b_compat.py  autogen_tool.py  cell.py  claude_code_tool.py  cli.py  client.py  codex_tool.py  crewai_tool.py  decorator.py  dockerfile_transpiler.py  e2b_compat.py  generic_agent_tool.py  git_client.py  langchain_tool.py  llamaindex_tool.py  openai_agents_tool.py  syn_executor.py  syn_few_shot.json  template.py  transpiler.py  vercel_ai_tool.py
sdk/synapse/_templates/: quickjs.wasm
sdk/synapse/synapse_cell/: moonshot.py
sdk/synapse/tools/: __init__.py  crewai_tool.py  langchain_tool.py
sdk/tests/: benchmark_compare.py  benchmark_e2b.py  benchmark_results.json  red_team.py  red_team_replay.py  red_team_results.json  stress_test.py  stress_test_results.json  test_client.py  test_decorator.py  test_dockerfile_transpiler.py  test_e2e_parity.py  test_filesystem_completeness.py  test_integration.py  test_lifecycle_batch_a.py  test_mcp.py  test_streaming_background.py  test_templates.py  test_tool_integrations.py  test_volumes.py
sdk/tests/e2e/: package-lock.json  package.json  test_e2b_compat.mjs  test_real_user.mjs
sdk/wasm-engine/: Cargo.toml
sdk/wasm-engine/src/: lib.rs
templates/: python3-data-science.json
templates/python-3.11/: cell.yaml
templates/python-3.11-data-science/: cell.yaml
