[package]
name = "synapse-gateway"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "synapse_rust_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-ext"]
python-ext = ["pyo3"]

[dependencies]
# abi3-py38: build against Python's stable ABI starting at 3.8, so the same
# wheel runs on 3.8 through 3.14+. Avoids per-Python-version rebuilds and
# unblocks installation on systems where the default `python3` is newer than
# pyo3 0.21.2's nominal maximum (3.12).
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"], optional = true }
# wasmtime + wasmtime-wasi: bumped from "18" to "43" on 2026-04-15.
# Aligns Cell gateway with the documented production runtime (synapse/CLAUDE.md
# says "Rust + wasmtime 43 on Linux"). Code in cell.rs already uses the v22+
# API surface (p1, p2, WasiP1Ctx, DirPerms, FilePerms, add_to_linker_sync) —
# the v18 pin was the source of the build errors documented in JC-001.
wasmtime = "43"
wasmtime-wasi = "43"
sha2 = "0.10.9"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12", features = ["sync"] }
# z3 = "0.12"  # PURGED 2026-04-15: Z3 belongs to the research swarm, not the commercial Cell product.
#                The runtime Wasm sandbox already enforces memory safety; static @inv proofs
#                are a research concern, not an E2B-parity concern. To re-enable, restore this
#                line and revert the Z3 stubs in src/main.rs (search for "Z3 PURGE").
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
ureq = { version = "2", features = ["json", "tls"] }
ndarray = "0.17.2"
tungstenite = "0.29.0"
libc = "0.2"
ed25519-dalek = "2.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
