[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.118"
js-sys = "0.3.76"
sha2 = "0.10.8"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
bytemuck = { version = "1.19", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
